--- a/src/css/global.css
+++ b/src/css/global.css
@@ -220,6 +220,10 @@ p {
   background-color: #222222;
 }
 
+.turn-off {
+  pointer-events: none;
+}
+
 /*******************Layout******************/
 
 .content {
@@ -230,10 +234,6 @@ p {
 }
 
 /*******************Navbar******************/
-
-.turn-off {
-  pointer-events: none;
-}
 
 .nav-bar {
   background-color: #1d1d1d !important;
@@ -538,7 +538,6 @@ p {
   width: fit-content;
   margin: auto;
   padding: 0 5px;
-  font-weight: 400;
 }
 
 .explanation-list li {
@@ -1135,6 +1134,10 @@ pre span {
 .greater {
   color: #f06c07;
   font-size: 1.2em;
+}
+
+.selection.greater{
+  font-size: 1.1em;
 }
 
 @keyframes fill-before {
@@ -2750,11 +2753,11 @@ pre span {
   }
 
   .header-title-1 {
-    margin-left: 2% !important;
+    margin-left: 4% !important;
   }
 
   .header-title-2 {
-    margin: 2% 0 2% 27% !important;
+    margin: 2% 0 2% 29% !important;
   }
 
   .header-title-3 {
@@ -2835,7 +2838,7 @@ pre span {
   }
 
   .header-title-2 {
-    margin: 2% 0 2% 30% !important;
+    margin: 2% 0 2% 32% !important;
   }
 
   .header-title-3 {
