--- a/src/css/global.css
+++ b/src/css/global.css
@@ -62,6 +62,10 @@
   --fill-color: blue;
 }
 
+[data-theme="dark"] .tube::before {
+  background: red !important;
+}
+
 [data-theme="dark"] .sorted {
   --fill-color: #f06c07;
 }
@@ -579,26 +583,40 @@ p {
   .top-container {
     width: 75%;
   }
+  .insertion.top-container {
+    width: 85%;
+  }
 }
 
 @media (min-width: 1000px) {
   .top-container {
     line-height: 32px;
+    width: 85%;
   }
-
+  .insertion.top-container {
+    width: 95%;
+  }
   .explanation-heading {
     width: 80%;
   }
-
   .explanation-list {
-    width: 85%;
+    width: fit-content;
+  }
+}
+
+@media (min-width: 1200px) {
+  .top-container {
+    width: 75%;
+  }
+  .insertion.top-container {
+    width: 95%;
   }
 }
 
 @media (min-width: 1400px) {
   .top-container {
     font-size: 22px;
-    width: 60%;
+    width: 70%;
   }
 }
 
@@ -1301,18 +1319,7 @@ pre span {
 
 /****************Selection Tubes******************/
 
-/* .selection.row {
-  display: flex;
-  flex-grow: 1;
-  justify-content: center;
-  margin-top: 1.5%;
-}
-
-.selection-div {
-  font-weight: 500 !important;
-}
-
-.min::before {
+.min-tube>.cap::before {
   content: "min";
   position: relative;
   top: 4px;
@@ -1322,43 +1329,6 @@ pre span {
   --fill-color: green;
 }
 
-.selection-stay {
-  display: none;
-}
-
-.selection-swap {
-  display: none;
-}
-
-.selection.thought-bubble {
-  position: absolute;
-  z-index: 5;
-  border-radius: 30px;
-  padding-top: 3px;
-  padding-bottom: 8px;
-  text-align: center;
-  width: 100%;
-  border: 3px solid black;
-}
-
-.selection.thought-bubble p {
-  text-transform: none;
-  margin: 10px 0 10px;
-}
-
-.selection.thought-bubble div {
-  text-transform: none;
-  margin: 5px 0 3px;
-  font-weight: 600;
-}
-
-.move-to-front {
-  display: none;
-}
-
-.i-is-min {
-  display: none;
-} */
 
 /****************Quick Sort Tubes******************/
 
